--- a/pub/wefound.yaml
+++ b/pub/wefound.yaml
@@ -6,12 +6,27 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇺🇸_US_美国->🇬🇧_GB_英国_1
+    name: 🇺🇸_US_美国->🇬🇧_GB_英国
     type: vmess
-    server: 104.21.33.130
-    port: 2052
+    server: polouk.yj2022.gq
+    port: 8080
     cipher: auto
-    uuid: 544f2e93-51b0-4d47-fd72-e7d858021bbd
+    uuid: 4b5e4565-322f-4223-a891-78a84f189726
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /r8ykwif5rffiqJeJ49zLka7PbhWz3wiHs8cSeiRyZL
+      headers:
+        host: polouk.yj2022.gq
+  - &id002
+    name: 🇺🇸_US_美国->🇮🇳_IN_印度
+    type: vmess
+    server: mm3.shabijichang.com
+    port: 80
+    cipher: auto
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -19,24 +34,196 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: family.mgtajhiz.ir
-  - &id002
-    name: 🇫🇷_FR_法国_1
+        host: mm3.shabijichang.com
+  - &id003
+    name: 🇯🇵_JP_日本->🇺🇸_US_美国
     type: vmess
-    server: s1.19kala.co
+    server: dir01.netorigins2u.site
+    port: 30501
+    cipher: auto
+    uuid: 922eeb53-8f01-3d66-8b5d-02052a5fd392
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ''
+  - &id004
+    name: 🇺🇸_US_美国_1
+    type: vmess
+    server: 94.131.117.159
+    port: 80
+    cipher: auto
+    uuid: 72b3b89a-30c5-4dc7-8b6e-f61218b95eda
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /vmess
+      headers:
+        host: 94.131.117.159
+  - &id005
+    name: 🇨🇦_CA_加拿大
+    type: vmess
+    server: 193.203.203.88
+    port: 2082
+    cipher: auto
+    uuid: 2ec862af-bd1c-46f5-97af-bffbe61e3164
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: http
+  - &id006
+    name: 🇨🇳_CN_中国->🇧🇷_BR_巴西
+    type: trojan
+    server: 02cabca.bhaquh.xyz
+    port: 20696
+    udp: true
+    password: b2f62b6b-1b03-4d35-9026-524525dedbad
+    sni: v1-dy.ixigua.com
+    skip-cert-verify: true
+    network: tcp
+  - &id007
+    name: 🇺🇸_US_美国_2
+    type: vmess
+    server: cfzl2.freeapp.buzz
+    port: 8080
+    cipher: auto
+    uuid: 3ce4d20b-4374-42a2-a75e-24626b141ea2
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: icu2.mac2win.top
+  - &id008
+    name: 🇺🇸_US_美国_3
+    type: vmess
+    server: baystateparent.com
+    port: 80
+    cipher: auto
+    uuid: 417df789-074f-4d97-b00d-83b266c3724b
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /cctv13/hd.m3u8
+      headers:
+        host: nihaoyaus11.com
+  - &id009
+    name: 🇺🇸_US_美国_4
+    type: trojan
+    server: us2.lvwf8n-hh8e-2300-nmoo-d2e9naobeacn.9d8f269f96b25232-759cbb36d6548597.kaufen
+    port: 443
+    udp: true
+    password: e498c261-cabb-4b2c-810b-995d0bd8d049
+    sni: 206.237.5.220
+    skip-cert-verify: true
+    network: tcp
+  - &id010
+    name: 🇺🇸_US_美国_5
+    type: vmess
+    server: 167.82.86.194
+    port: 80
+    cipher: auto
+    uuid: 417df789-074f-4d97-b00d-83b266c3724b
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /cctv13/hd.m3u8
+      headers:
+        host: nihaoyaus3.com
+  - &id011
+    name: 🇺🇸_US_美国_6
+    type: vmess
+    server: 2876be99-f.3nvx.com
     port: 443
     cipher: auto
-    uuid: 5775de7e-0c2e-4e7c-8b9c-c48704d8facb
-    alterId: 0
+    uuid: 74dd674d-35fa-4f75-8b05-0f276e15c091
+    alterId: 1
     tls: true
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /OWTu4RMkF9V12oO5NLlQk
+      path: /assets
       headers:
-        host: s1.19kala.co
-  - &id003
-    name: 🇺🇸_US_美国_1
+        host: 2876be99-f.3nvx.com
+  - &id012
+    name: 🇭🇰_HK_香港->🇺🇸_US_美国
+    type: vmess
+    server: nice2.xn-w1yu8o.xyz
+    port: 80
+    cipher: auto
+    uuid: a5319baa-e846-43c7-91c2-d67a1e307c8b
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: icu2.mac2win.top
+  - &id013
+    name: 🇺🇸_US_美国_7
+    type: trojan
+    server: 89.116.180.179
+    port: 443
+    udp: true
+    password: d2698cf9-c47e-455c-8384-12e642cbba15
+    sni: p6us4.pqjc.buzz
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /pq/us4
+  - &id014
+    name: 🇺🇸_US_美国_8
+    type: vmess
+    server: c.mac2win.top
+    port: 8080
+    cipher: auto
+    uuid: ba1aa9ae-3cad-46a5-8dfa-b0973c35abeb
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /argox-vm?ed=2048
+      headers:
+        host: acquire-cleaners-camel-terror.trycloudflare.com
+  - &id015
+    name: 🇺🇸_US_美国_9
+    type: vmess
+    server: 94.131.14.177
+    port: 80
+    cipher: auto
+    uuid: 2c5fee13-f08b-4ba8-86db-27dd51cb9781
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /vmess
+  - &id016
+    name: 🇺🇸_US_美国->🇱🇹_LT_立陶宛
+    type: vmess
+    server: moon.chanell.mci.v-x4ssd.space
+    port: 8080
+    cipher: auto
+    uuid: 97bba5ca-185c-4e6a-ac64-96e920d4eeda
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: moon.chanell.mci.v-x4ssd.space
+  - &id017
+    name: 🇺🇸_US_美国_10
     type: vmess
     server: 104.21.75.246
     port: 80
@@ -50,196 +237,8 @@ proxies:
       path: /
       headers:
         host: sbl2.shabijichang.com
-  - &id004
-    name: 🇺🇸_US_美国->🇬🇧_GB_英国_2
-    type: vmess
-    server: family.mgtajhiz.ir
-    port: 2052
-    cipher: auto
-    uuid: 544f2e93-51b0-4d47-fd72-e7d858021bbd
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: family.mgtajhiz.ir
-  - &id005
-    name: 🇸🇪_SE_瑞典
-    type: vmess
-    server: 94.131.98.90
-    port: 80
-    cipher: auto
-    uuid: 0814badf-f3fc-4f15-b400-4ae8cdce610e
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmess
-  - &id006
-    name: 🇷🇺_RU_俄罗斯联邦
-    type: vmess
-    server: 89.221.224.12
-    port: 80
-    cipher: auto
-    uuid: 3bc3514c-cbcb-4b08-9797-c62850ae8bb4
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmess
-  - &id007
-    name: 🇮🇳_IN_印度
-    type: vmess
-    server: 103.113.68.233
-    port: 80
-    cipher: auto
-    uuid: fddb3781-7e15-4731-a933-94db110b4bbc
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmess
-      headers:
-        host: 103.113.68.233
-  - &id008
-    name: 🇺🇸_US_美国->🇬🇧_GB_英国_3
-    type: vmess
-    server: ld2.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: ld2.shabijichang.com
-  - &id009
-    name: 🇺🇸_US_美国->🇫🇷_FR_法国
-    type: vmess
-    server: fr-01.jikuai.xyz
-    port: 2082
-    cipher: auto
-    uuid: 5d3e67f9-b611-4076-9136-cc64fd234806
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: fr-01.jikuai.xyz
-  - &id010
-    name: 🇸🇰_SK_斯洛伐克
-    type: vmess
-    server: sk1-vmess.sshmax.xyz
-    port: 80
-    cipher: auto
-    uuid: 06c2b568-b7df-4e80-9031-c83569397db4
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmess
-      headers:
-        host: sk1-vmess.sshmax.xyz
-  - &id011
-    name: 🇺🇸_US_美国_2
-    type: vmess
-    server: v2ray.ibgfw.top
-    port: 2053
-    cipher: auto
-    uuid: 5a5aadc2-8834-4e7b-895b-74ad155fbf24
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-  - &id012
-    name: 🇺🇸_US_美国_3
-    type: trojan
-    server: sg2.lvwf8n-hh8e-2300-nmoo-d2e9naobeacn.9d8f269f96b25232-759cbb36d6548597.kaufen
-    port: 443
-    udp: true
-    password: 5582a559-d68a-484b-bc33-4274bf63c71a
-    sni: sg2.lvwf8n-hh8e-2300-nmoo-d2e9naobeacn.9d8f269f96b25232-759cbb36d6548597.kaufen
-    skip-cert-verify: true
-    network: tcp
-  - &id013
-    name: 🇺🇸_US_美国_4
-    type: vmess
-    server: 95.164.46.154
-    port: 8080
-    cipher: auto
-    uuid: 431fda16-e0f8-4884-b4fd-965f03f86471
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmess
-  - &id014
-    name: 🇭🇰_HK_香港->🇺🇸_US_美国
-    type: vmess
-    server: cm1.xn-w1yu8o.xyz
-    port: 80
-    cipher: auto
-    uuid: a5319baa-e846-43c7-91c2-d67a1e307c8b
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: icu2.mac2win.top
-  - &id015
-    name: 🇭🇰_HK_香港
-    type: vmess
-    server: cm3.xn-w1yu8o.xyz
-    port: 80
-    cipher: auto
-    uuid: e759eadc-8e71-47b0-874e-871e3d8dc31e
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: icu3.mac2win.top
-  - &id016
-    name: 🇺🇸_US_美国_5
-    type: trojan
-    server: 89.116.180.179
-    port: 443
-    udp: true
-    password: d2698cf9-c47e-455c-8384-12e642cbba15
-    sni: p6us4.pqjc.buzz
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /pq/us4
-  - &id017
-    name: 🇫🇷_FR_法国_2
-    type: vmess
-    server: 57.129.7.139
-    port: 60240
-    cipher: auto
-    uuid: 84e92b93-93d0-40e4-8b2b-123801eeda44
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
   - &id018
-    name: 🇺🇸_US_美国_6
+    name: 🇺🇸_US_美国_11
     type: trojan
     server: 167.68.5.183
     port: 443
@@ -250,21 +249,6 @@ proxies:
     network: ws
     ws-opts:
       path: /pq/us3
-  - &id019
-    name: 🇺🇸_US_美国_7
-    type: vmess
-    server: us-02.jikuai.xyz
-    port: 2082
-    cipher: auto
-    uuid: 70666776-4e9f-4350-b3f0-afaff6a70db0
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: us-02.jikuai.xyz
 proxy-groups:
   - name: PROXY
     type: select
@@ -309,7 +293,6 @@ proxy-groups:
       - *id016
       - *id017
       - *id018
-      - *id019
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -333,7 +316,6 @@ proxy-groups:
       - *id016
       - *id017
       - *id018
-      - *id019
   - name: SELECT
     type: select
     proxies:
@@ -355,7 +337,6 @@ proxy-groups:
       - *id016
       - *id017
       - *id018
-      - *id019
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
