--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,233 +6,139 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇺🇸_US_美国_1
-    type: trojan
-    server: 167.68.5.183
-    port: 443
-    udp: true
-    password: d2698cf9-c47e-455c-8384-12e642cbba15
-    sni: 6us3.pqjc.buzz
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /pq/us3
-  - &id002
-    name: 🇬🇧_GB_英国
-    type: ss
-    server: 198.244.231.34
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id003
-    name: 🇫🇷_FR_法国_1
-    type: ss
-    server: 57.129.1.21
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id004
-    name: 🇫🇷_FR_法国_2
-    type: ss
-    server: 57.129.1.22
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id005
-    name: 🇺🇸_US_美国_2
+    name: 🇷🇺_RU_俄罗斯联邦_1
     type: vmess
-    server: 94.131.117.159
-    port: 80
+    server: 46.29.166.237
+    port: 47555
     cipher: auto
-    uuid: 72b3b89a-30c5-4dc7-8b6e-f61218b95eda
+    uuid: 0c49cd19-2758-4d38-e6a8-11f2d6635860
     alterId: 0
     tls: false
     skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmess
-      headers:
-        host: 94.131.117.159
-  - &id006
-    name: 🇺🇸_US_美国_3
-    type: ss
-    server: 89.187.181.179
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id007
-    name: 🇺🇸_US_美国->🇱🇹_LT_立陶宛
+    network: tcp
+  - &id002
+    name: 🇺🇸_US_美国_1
     type: vmess
-    server: moon.chanell.mci.v-x4ssd.space
-    port: 8080
+    server: 157.254.231.45
+    port: 38461
     cipher: auto
-    uuid: 97bba5ca-185c-4e6a-ac64-96e920d4eeda
+    uuid: 8f53d96b-cb13-4197-cd44-37db95809de5
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id003
+    name: 🇳🇱_NL_荷兰_1
+    type: vmess
+    server: 79.132.128.60
+    port: 21524
+    cipher: auto
+    uuid: 839102ad-842f-43e5-e589-ac10a3c78571
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
       path: /
-      headers:
-        host: moon.chanell.mci.v-x4ssd.space
-  - &id008
-    name: 🇸🇰_SK_斯洛伐克_1
+  - &id004
+    name: 🇨🇦_CA_加拿大_1
     type: vmess
-    server: sk1-vmess.sshmax.xyz
-    port: 80
+    server: 74.48.130.248
+    port: 20426
     cipher: auto
-    uuid: 06c2b568-b7df-4e80-9031-c83569397db4
+    uuid: 67234df6-8d1d-409e-c263-f17742a6151c
     alterId: 0
     tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmess
-      headers:
-        host: sk1-vmess.sshmax.xyz
-  - &id009
-    name: 🇸🇰_SK_斯洛伐克_2
-    type: vmess
-    server: 5.252.23.133
-    port: 80
-    cipher: auto
-    uuid: 34b71805-2692-45e4-861d-0818954940e2
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmess
-  - &id010
-    name: 🇷🇸_RS_塞尔维亚
-    type: vmess
-    server: 45.89.55.147
-    port: 80
-    cipher: auto
-    uuid: 4c2dbe94-833b-476c-910b-af8b5f3c0123
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmess
-  - &id011
-    name: 🇺🇸_US_美国_4
-    type: vmess
-    server: baystateparent.com
-    port: 80
-    cipher: auto
-    uuid: 417df789-074f-4d97-b00d-83b266c3724b
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /cctv13/hd.m3u8
-      headers:
-        host: nihaoyaus11.com
-  - &id012
-    name: 🇺🇸_US_美国_5
-    type: vmess
-    server: 2876be99-f.3nvx.com
-    port: 443
-    cipher: auto
-    uuid: 74dd674d-35fa-4f75-8b05-0f276e15c091
-    alterId: 1
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /assets
-      headers:
-        host: 2876be99-f.3nvx.com
-  - &id013
-    name: 🇺🇸_US_美国->🇬🇧_GB_英国
-    type: vmess
-    server: polouk.yj2022.gq
-    port: 8080
-    cipher: auto
-    uuid: 4b5e4565-322f-4223-a891-78a84f189726
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /r8ykwif5rffiqJeJ49zLka7PbhWz3wiHs8cSeiRyZL
-      headers:
-        host: polouk.yj2022.gq
-  - &id014
-    name: 🇨🇳_CN_中国->🇧🇷_BR_巴西
-    type: trojan
-    server: 02cabca.bhaquh.xyz
-    port: 20696
-    udp: true
-    password: b2f62b6b-1b03-4d35-9026-524525dedbad
-    sni: v1-dy.ixigua.com
     skip-cert-verify: true
     network: tcp
-  - &id015
-    name: 🇺🇸_US_美国_6
+  - &id005
+    name: 🇺🇸_US_美国_2
     type: ss
-    server: us.fanqiecloud.top
-    port: 22752
-    password: 389d5e95-61a5-4633-a127-f279a75b1fca
-    cipher: chacha20-ietf-poly1305
-  - &id016
-    name: 🇫🇷_FR_法国_3
+    server: 38.54.104.17
+    port: 18808
+    password: UEZLKj26tx
+    cipher: aes-256-gcm
+  - &id006
+    name: 🇩🇪_DE_德国->🇬🇧_GB_英国
     type: ss
-    server: 135.125.172.153
+    server: 45.82.167.133
+    port: 28399
+    password: admin
+    cipher: aes-256-gcm
+  - &id007
+    name: 🇺🇸_US_美国_3
+    type: vmess
+    server: 2.58.85.44
+    port: 444
+    cipher: auto
+    uuid: aa606a23-5454-4b3b-fee6-e4ab981df030
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: http
+  - &id008
+    name: 🇺🇸_US_美国_4
+    type: ss
+    server: 89.187.181.179
     port: 443
     password: asdKkaskJKfnsa
     cipher: aes-256-cfb
-  - &id017
-    name: 🇩🇪_DE_德国
+  - &id009
+    name: 🇨🇦_CA_加拿大_2
     type: ss
-    server: de.fanqiecloud.top
-    port: 22302
-    password: 389d5e95-61a5-4633-a127-f279a75b1fca
-    cipher: chacha20-ietf-poly1305
-  - &id018
-    name: 🇺🇸_US_美国_7
-    type: ss
-    server: us.colacloud.site
-    port: 24652
-    password: 097418b3-a07a-4747-bae6-b5142ee39a19
-    cipher: chacha20-ietf-poly1305
-  - &id019
-    name: 🇷🇺_RU_俄罗斯联邦
-    type: ss
-    server: 91.194.161.7
-    port: 8388
-    password: OWJlYjYy
-    cipher: chacha20-ietf-poly1305
-  - &id020
-    name: 🇺🇸_US_美国_8
-    type: ss
-    server: 64.31.55.5
-    port: 11223
-    password: dongtaiwang.com
+    server: 66.103.199.2
+    port: 56271
+    password: kKKLUkNaMA
     cipher: aes-256-gcm
-  - &id021
-    name: 🇫🇷_FR_法国_4
-    type: ss
-    server: 185.231.205.80
-    port: 1443
-    password: MGQwNTgw
-    cipher: chacha20-ietf-poly1305
-  - &id022
-    name: 🇯🇵_JP_日本->🇺🇸_US_美国
+  - &id010
+    name: 🇮🇷_IR_伊朗
     type: vmess
-    server: dir01.netorigins2u.site
-    port: 30501
+    server: 37.152.186.109
+    port: 31341
     cipher: auto
-    uuid: 922eeb53-8f01-3d66-8b5d-02052a5fd392
+    uuid: 9d379161-cbeb-4ef6-f023-ca174175ea62
     alterId: 0
-    tls: true
+    tls: false
     skip-cert-verify: true
-    servername: us01.tomoony.xyz
-  - &id023
-    name: 🇨🇦_CA_加拿大
+    network: ws
+    ws-opts:
+      path: /
+  - &id011
+    name: 🇳🇱_NL_荷兰_2
+    type: vmess
+    server: 93.174.89.111
+    port: 58394
+    cipher: auto
+    uuid: 7c76ed33-70c5-4ee6-e4a7-66fefd44c1b9
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+  - &id012
+    name: 🇺🇸_US_美国_5
+    type: ss
+    server: 38.54.104.184
+    port: 18808
+    password: wwq6Xo5gJ8
+    cipher: aes-256-gcm
+  - &id013
+    name: 🇦🇺_AU_澳大利亚
+    type: ss
+    server: au.colacloud.site
+    port: 20262
+    password: 3df284ab-5802-48aa-bb0d-42153921690a
+    cipher: chacha20-ietf-poly1305
+  - &id014
+    name: 🇺🇸_US_美国_6
+    type: ss
+    server: tg_mfbpn_aus1.52vpn.eu.org
+    port: 443
+    password: amazonskr05
+    cipher: aes-256-cfb
+  - &id015
+    name: 🇨🇦_CA_加拿大_3
     type: vmess
     server: 193.203.203.88
     port: 2082
@@ -242,59 +148,101 @@ proxies:
     tls: false
     skip-cert-verify: true
     network: http
-  - &id024
+  - &id016
+    name: 🇺🇸_US_美国_7
+    type: ss
+    server: 64.31.55.5
+    port: 11223
+    password: dongtaiwang.com
+    cipher: aes-256-gcm
+  - &id017
+    name: 🇷🇺_RU_俄罗斯联邦_2
+    type: vmess
+    server: 46.29.166.124
+    port: 47412
+    cipher: auto
+    uuid: 291a5c6a-447e-4fc7-b3d7-28ebec5cbcd7
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id018
+    name: 🇺🇸_US_美国->🇳🇱_NL_荷兰
+    type: vmess
+    server: 162.159.129.87
+    port: 2096
+    cipher: auto
+    uuid: 12009e57-6fd8-46d6-94af-539514a7e7c7
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: s5678543.shargh.shop
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: s1.shargh.shop
+  - &id019
+    name: 🇬🇧_GB_英国_1
+    type: ss
+    server: 198.244.231.34
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id020
+    name: 🇺🇸_US_美国_8
+    type: trojan
+    server: sg1.lvwf8n-hh8e-2300-nmoo-d2e9naobeacn.9d8f269f96b25232-759cbb36d6548597.kaufen
+    port: 443
+    udp: true
+    password: 7b01f853-1c72-47db-8f57-151d491b3bf9
+    sni: 206.237.5.220
+    skip-cert-verify: true
+    network: tcp
+  - &id021
     name: 🇺🇸_US_美国_9
+    type: vmess
+    server: 104.21.75.246
+    port: 80
+    cipher: auto
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: sbl2.shabijichang.com
+  - &id022
+    name: 🇺🇸_US_美国_10
     type: trojan
     server: us2.lvwf8n-hh8e-2300-nmoo-d2e9naobeacn.9d8f269f96b25232-759cbb36d6548597.kaufen
     port: 443
     udp: true
-    password: e498c261-cabb-4b2c-810b-995d0bd8d049
+    password: 7b01f853-1c72-47db-8f57-151d491b3bf9
     sni: 206.237.5.220
     skip-cert-verify: true
     network: tcp
-  - &id025
-    name: 🇦🇺_AU_澳大利亚
+  - &id023
+    name: 🇫🇷_FR_法国
     type: ss
-    server: au.colacloud.site
-    port: 20262
-    password: 097418b3-a07a-4747-bae6-b5142ee39a19
-    cipher: chacha20-ietf-poly1305
-  - &id026
-    name: 🇳🇱_NL_荷兰
-    type: ss
-    server: 5.181.21.19
-    port: 8388
-    password: Njk2Nzcy
-    cipher: chacha20-ietf-poly1305
-  - &id027
-    name: 🇺🇸_US_美国_10
-    type: vmess
-    server: 95.164.46.154
-    port: 8080
-    cipher: auto
-    uuid: 431fda16-e0f8-4884-b4fd-965f03f86471
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmess
-  - &id028
+    server: 135.125.172.153
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id024
     name: 🇺🇸_US_美国_11
     type: vmess
-    server: 167.82.86.194
-    port: 80
+    server: 147.189.161.106
+    port: 30823
     cipher: auto
-    uuid: 417df789-074f-4d97-b00d-83b266c3724b
+    uuid: d992809a-ce81-482b-c39d-7cfb60ef2b99
     alterId: 0
     tls: false
     skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /cctv13/hd.m3u8
-      headers:
-        host: nihaoyaus3.com
-  - &id029
+    network: tcp
+  - &id025
     name: 🇺🇸_US_美国_12
     type: vmess
     server: cfzl2.freeapp.buzz
@@ -309,10 +257,96 @@ proxies:
       path: /
       headers:
         host: icu2.mac2win.top
+  - &id026
+    name: 🇺🇸_US_美国_13
+    type: vmess
+    server: cf-lt.sharecentre.online
+    port: 8880
+    cipher: auto
+    uuid: b1e30339-a603-47d1-b31c-1d0ceb59952e
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /api/v3/download.getFile
+      headers:
+        host: ssrsub.v001.ssrsub.com
+  - &id027
+    name: 🇺🇸_US_美国_14
+    type: vmess
+    server: ns1.v2-vip.fun
+    port: 80
+    cipher: auto
+    uuid: b1e30339-a603-47d1-b31c-1d0ceb59952e
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /api/v3/download.getFile
+      headers:
+        host: ssrsub.v006.ssrsub.com
+  - &id028
+    name: 🇺🇸_US_美国_15
+    type: vmess
+    server: ns1.v2-vip.fun
+    port: 8880
+    cipher: auto
+    uuid: b1e30339-a603-47d1-b31c-1d0ceb59952e
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /api/v3/download.getFile
+      headers:
+        host: ssrsub.v001.ssrsub.com
+  - &id029
+    name: 🇺🇸_US_美国_16
+    type: vmess
+    server: singapore.com
+    port: 8880
+    cipher: auto
+    uuid: b1e30339-a603-47d1-b31c-1d0ceb59952e
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /api/v3/download.getFile
+      headers:
+        host: ssrsub.v001.ssrsub.com
   - &id030
+    name: 🇺🇸_US_美国_17
+    type: vmess
+    server: cfzl1.freeapp.buzz
+    port: 8080
+    cipher: auto
+    uuid: 3ce4d20b-4374-42a2-a75e-24626b141ea2
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: icu2.mac2win.top
+  - &id031
+    name: 🇮🇷_IR_伊朗->🇩🇪_DE_德国
+    type: vmess
+    server: 193.151.151.227
+    port: 18904
+    cipher: auto
+    uuid: 270ce474-6850-4102-85af-5a77fc660350
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id032
     name: 🇭🇰_HK_香港->🇺🇸_US_美国
     type: vmess
-    server: nice2.xn-w1yu8o.xyz
+    server: cm1.xn-w1yu8o.xyz
     port: 80
     cipher: auto
     uuid: a5319baa-e846-43c7-91c2-d67a1e307c8b
@@ -324,8 +358,23 @@ proxies:
       path: /
       headers:
         host: icu2.mac2win.top
-  - &id031
-    name: 🇺🇸_US_美国_13
+  - &id033
+    name: 🇺🇸_US_美国_18
+    type: vmess
+    server: cloudflare-cmi1.shaniugpt.top
+    port: 8080
+    cipher: auto
+    uuid: 12108a85-b442-4197-bec0-9bed9b7345e2
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: yyjc-uk1.shaniugpt.top
+  - &id034
+    name: 🇺🇸_US_美国_19
     type: vmess
     server: c.mac2win.top
     port: 8080
@@ -339,38 +388,23 @@ proxies:
       path: /argox-vm?ed=2048
       headers:
         host: acquire-cleaners-camel-terror.trycloudflare.com
-  - &id032
-    name: 🇺🇸_US_美国->🇮🇳_IN_印度
+  - &id035
+    name: 🇬🇧_GB_英国_2
     type: vmess
-    server: mm3.shabijichang.com
-    port: 80
+    server: 172.99.190.109
+    port: 443
     cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    uuid: 03fcc618-b93d-6796-6aed-8a38c975d581
     alterId: 0
-    tls: false
+    tls: true
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /
-      headers:
-        host: mm3.shabijichang.com
-  - &id033
-    name: 🇺🇸_US_美国_14
+      path: linkvws
+  - &id036
+    name: 🇺🇸_US_美国_20
     type: vmess
-    server: 94.131.14.177
-    port: 80
-    cipher: auto
-    uuid: 2c5fee13-f08b-4ba8-86db-27dd51cb9781
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmess
-  - &id034
-    name: 🇺🇸_US_美国_15
-    type: vmess
-    server: 104.21.75.246
+    server: sbl2.shabijichang.com
     port: 80
     cipher: auto
     uuid: c458695d-6908-45c3-9512-e0c46418454c
@@ -442,6 +476,8 @@ proxy-groups:
       - *id032
       - *id033
       - *id034
+      - *id035
+      - *id036
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -481,6 +517,8 @@ proxy-groups:
       - *id032
       - *id033
       - *id034
+      - *id035
+      - *id036
   - name: SELECT
     type: select
     proxies:
@@ -518,6 +556,8 @@ proxy-groups:
       - *id032
       - *id033
       - *id034
+      - *id035
+      - *id036
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
