--- a/pub/wefound.yaml
+++ b/pub/wefound.yaml
@@ -6,165 +6,43 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇷🇺_RU_俄罗斯联邦_1
+    name: 🇺🇸_US_美国_1
     type: vmess
-    server: 46.29.166.124
-    port: 47412
+    server: 157.254.231.45
+    port: 38461
     cipher: auto
-    uuid: 291a5c6a-447e-4fc7-b3d7-28ebec5cbcd7
+    uuid: 8f53d96b-cb13-4197-cd44-37db95809de5
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: tcp
   - &id002
-    name: 🇨🇦_CA_加拿大_1
-    type: vmess
-    server: 74.48.183.246
-    port: 40310
-    cipher: auto
-    uuid: 6371ee48-8b19-4a4c-a399-88f692228ac3
-    alterId: 0
-    tls: false
+    name: 🇰🇷_KR_韩国->🇦🇺_AU_澳大利亚_1
+    type: trojan
+    server: frontend.kuangbiaoyun.com
+    port: 40005
+    udp: true
+    password: 57edfecf-5694-4a34-8072-54a4f0636a62
+    sni: frontend.kuangbiaoyun.com
     skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
+    network: tcp
   - &id003
-    name: 🇺🇸_US_美国_1
-    type: vmess
-    server: cfzl2.freeapp.buzz
-    port: 8080
-    cipher: auto
-    uuid: 3ce4d20b-4374-42a2-a75e-24626b141ea2
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: icu2.mac2win.top
-  - &id004
     name: 🇺🇸_US_美国_2
     type: vmess
-    server: cloudflare-cmi1.shaniugpt.top
-    port: 8080
-    cipher: auto
-    uuid: 12108a85-b442-4197-bec0-9bed9b7345e2
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: yyjc-uk1.shaniugpt.top
-  - &id005
-    name: 🇱🇺_LU_卢森堡
-    type: vmess
-    server: 107.189.29.193
-    port: 21280
-    cipher: auto
-    uuid: 2d23b71f-78e1-4f17-a7cc-1ef04a910a4c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id006
-    name: 🇺🇸_US_美国_3
-    type: vmess
-    server: 103.179.142.117
-    port: 24640
-    cipher: auto
-    uuid: 119a25bf-e35e-44c2-8b81-287ea8b2cac0
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id007
-    name: 🇺🇸_US_美国_4
-    type: vmess
-    server: cf-lt.sharecentre.online
-    port: 8880
-    cipher: auto
-    uuid: b1e30339-a603-47d1-b31c-1d0ceb59952e
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /api/v3/download.getFile
-      headers:
-        host: ssrsub.v001.ssrsub.com
-  - &id008
-    name: 🇺🇸_US_美国_5
-    type: vmess
-    server: cfzl1.freeapp.buzz
-    port: 8080
-    cipher: auto
-    uuid: 3ce4d20b-4374-42a2-a75e-24626b141ea2
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: icu2.mac2win.top
-  - &id009
-    name: 🇨🇦_CA_加拿大_2
-    type: vmess
-    server: 74.48.130.248
-    port: 20426
-    cipher: auto
-    uuid: 67234df6-8d1d-409e-c263-f17742a6151c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id010
-    name: 🇺🇸_US_美国_6
-    type: vmess
-    server: singapore.com
+    server: 94.131.14.177
     port: 80
     cipher: auto
-    uuid: b1e30339-a603-47d1-b31c-1d0ceb59952e
+    uuid: 2c5fee13-f08b-4ba8-86db-27dd51cb9781
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /api/v3/download.getFile
+      path: /vmess
       headers:
-        host: ssrsub.v004.ssrsub.com
-  - &id011
-    name: 🇺🇸_US_美国_7
-    type: vmess
-    server: ns1.v2-vip.fun
-    port: 8880
-    cipher: auto
-    uuid: b1e30339-a603-47d1-b31c-1d0ceb59952e
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /api/v3/download.getFile
-      headers:
-        host: ssrsub.v001.ssrsub.com
-  - &id012
-    name: 🇺🇸_US_美国_8
-    type: vmess
-    server: 2.58.85.44
-    port: 444
-    cipher: auto
-    uuid: aa606a23-5454-4b3b-fee6-e4ab981df030
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: http
-  - &id013
-    name: 🇺🇸_US_美国_9
+        host: 94.131.14.177
+  - &id004
+    name: 🇺🇸_US_美国_3
     type: trojan
     server: 89.116.180.179
     port: 443
@@ -175,46 +53,72 @@ proxies:
     network: ws
     ws-opts:
       path: /pq/us4
-  - &id014
-    name: 🇺🇸_US_美国_10
+  - &id005
+    name: 🇰🇷_KR_韩国->🇦🇺_AU_澳大利亚_2
+    type: trojan
+    server: 146.56.179.67
+    port: 40005
+    udp: true
+    password: cc05b267-2e17-4e73-92f0-2cf603aa5997
+    skip-cert-verify: true
+    network: tcp
+  - &id006
+    name: 🇰🇷_KR_韩国->🇺🇸_US_美国_1
+    type: trojan
+    server: frontend.kuangbiaoyun.com
+    port: 40007
+    udp: true
+    password: 57edfecf-5694-4a34-8072-54a4f0636a62
+    sni: frontend.kuangbiaoyun.com
+    skip-cert-verify: true
+    network: tcp
+  - &id007
+    name: 🇨🇦_CA_加拿大
     type: vmess
-    server: 148.135.72.169
-    port: 8080
+    server: 193.203.203.88
+    port: 2082
     cipher: auto
-    uuid: e514c3c9-703d-4e94-e71f-73f9f34897ec
+    uuid: 2ec862af-bd1c-46f5-97af-bffbe61e3164
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: http
+  - &id008
+    name: 🇮🇷_IR_伊朗
+    type: vmess
+    server: 37.152.186.109
+    port: 31341
+    cipher: auto
+    uuid: 9d379161-cbeb-4ef6-f023-ca174175ea62
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
       path: /
-  - &id015
-    name: 🇺🇸_US_美国->🇳🇱_NL_荷兰
-    type: vmess
-    server: 162.159.129.87
-    port: 2096
-    cipher: auto
-    uuid: 12009e57-6fd8-46d6-94af-539514a7e7c7
-    alterId: 0
-    tls: true
+  - &id009
+    name: 🇺🇸_US_美国_4
+    type: trojan
+    server: 167.68.5.183
+    port: 443
+    udp: true
+    password: d2698cf9-c47e-455c-8384-12e642cbba15
+    sni: 6us3.pqjc.buzz
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /
-      headers:
-        host: s1.shargh.shop
-  - &id016
-    name: 🇨🇳_CN_中国->🇦🇹_AT_奥地利
+      path: /pq/us3
+  - &id010
+    name: 🇰🇷_KR_韩国->🇺🇸_US_美国_2
     type: trojan
-    server: other.kunlun-ppg.com
-    port: 10848
+    server: 146.56.179.67
+    port: 40007
     udp: true
-    password: 376b4a77-edab-46db-80e8-d3deec985778
-    sni: alibaba-node.cn
+    password: cc05b267-2e17-4e73-92f0-2cf603aa5997
     skip-cert-verify: true
     network: tcp
-  - &id017
-    name: 🇺🇸_US_美国_11
+  - &id011
+    name: 🇺🇸_US_美国_5
     type: vmess
     server: ns1.v2-vip.fun
     port: 80
@@ -227,167 +131,40 @@ proxies:
     ws-opts:
       path: /api/v3/download.getFile
       headers:
-        host: ssrsub.v006.ssrsub.com
-  - &id018
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国
-    type: trojan
-    server: other.kunlun-ppg.com
-    port: 10850
-    udp: true
-    password: 376b4a77-edab-46db-80e8-d3deec985778
-    sni: alibaba-node.cn
-    skip-cert-verify: true
-    network: tcp
-  - &id019
-    name: 🇰🇷_KR_韩国->🇦🇺_AU_澳大利亚
-    type: trojan
-    server: frontend.kuangbiaoyun.com
-    port: 40005
-    udp: true
-    password: 57edfecf-5694-4a34-8072-54a4f0636a62
-    sni: frontend.kuangbiaoyun.com
-    skip-cert-verify: true
-    network: tcp
-  - &id020
-    name: 🇰🇷_KR_韩国->🇺🇸_US_美国
-    type: trojan
-    server: frontend.kuangbiaoyun.com
-    port: 40007
-    udp: true
-    password: 57edfecf-5694-4a34-8072-54a4f0636a62
-    sni: frontend.kuangbiaoyun.com
-    skip-cert-verify: true
-    network: tcp
-  - &id021
-    name: 🇮🇷_IR_伊朗
+        host: ssrsub.v03.ssrsub.com
+  - &id012
+    name: 🇺🇸_US_美国->🇱🇹_LT_立陶宛
     type: vmess
-    server: 37.152.186.109
-    port: 31341
+    server: moon.chanell.mci.v-x4ssd.space
+    port: 8080
     cipher: auto
-    uuid: 9d379161-cbeb-4ef6-f023-ca174175ea62
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-  - &id022
-    name: 🇺🇸_US_美国_12
-    type: trojan
-    server: 167.68.5.183
-    port: 443
-    udp: true
-    password: d2698cf9-c47e-455c-8384-12e642cbba15
-    sni: 6us3.pqjc.buzz
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /pq/us3
-  - &id023
-    name: 🇬🇧_GB_英国
-    type: vmess
-    server: 103.179.143.40
-    port: 58108
-    cipher: auto
-    uuid: 372015b8-1cb7-4131-e8f9-6155209d19ba
+    uuid: 6ad7afd7-6958-478e-9fff-88f16f9a2008
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
       path: /
-  - &id024
-    name: 🇮🇷_IR_伊朗->🇩🇪_DE_德国
+      headers:
+        host: moon.chanell.mci.v-x4ssd.space
+  - &id013
+    name: 🇱🇺_LU_卢森堡
     type: vmess
-    server: 193.151.151.227
-    port: 18904
+    server: 107.189.29.193
+    port: 21280
     cipher: auto
-    uuid: 270ce474-6850-4102-85af-5a77fc660350
+    uuid: 2d23b71f-78e1-4f17-a7cc-1ef04a910a4c
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: tcp
-  - &id025
-    name: 🇺🇸_US_美国_13
+  - &id014
+    name: 🇺🇸_US_美国_6
     type: vmess
-    server: cf-lt.sharecentre.online
+    server: sbl2.shabijichang.com
     port: 80
     cipher: auto
-    uuid: b1e30339-a603-47d1-b31c-1d0ceb59952e
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /api/v3/download.getFile
-      headers:
-        host: ssrsub.v006.ssrsub.com
-  - &id026
-    name: 🇨🇦_CA_加拿大_3
-    type: vmess
-    server: 193.203.203.88
-    port: 2082
-    cipher: auto
-    uuid: 2ec862af-bd1c-46f5-97af-bffbe61e3164
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: http
-  - &id027
-    name: 🇺🇸_US_美国_14
-    type: vmess
-    server: 157.254.231.45
-    port: 38461
-    cipher: auto
-    uuid: 8f53d96b-cb13-4197-cd44-37db95809de5
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id028
-    name: 🇺🇸_US_美国_15
-    type: vmess
-    server: singapore.com
-    port: 8880
-    cipher: auto
-    uuid: b1e30339-a603-47d1-b31c-1d0ceb59952e
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /api/v3/download.getFile
-      headers:
-        host: ssrsub.v001.ssrsub.com
-  - &id029
-    name: 🇳🇱_NL_荷兰_1
-    type: vmess
-    server: 79.132.128.60
-    port: 21524
-    cipher: auto
-    uuid: 839102ad-842f-43e5-e589-ac10a3c78571
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-  - &id030
-    name: 🇳🇱_NL_荷兰_2
-    type: vmess
-    server: 93.174.89.111
-    port: 58394
-    cipher: auto
-    uuid: 7c76ed33-70c5-4ee6-e4a7-66fefd44c1b9
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-  - &id031
-    name: 🇭🇰_HK_香港->🇺🇸_US_美国
-    type: vmess
-    server: cm1.xn-w1yu8o.xyz
-    port: 80
-    cipher: auto
-    uuid: a5319baa-e846-43c7-91c2-d67a1e307c8b
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -395,9 +172,9 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: icu2.mac2win.top
-  - &id032
-    name: 🇷🇺_RU_俄罗斯联邦_2
+        host: sbl2.shabijichang.com
+  - &id015
+    name: 🇷🇺_RU_俄罗斯联邦_1
     type: vmess
     server: 46.29.166.237
     port: 47555
@@ -407,24 +184,24 @@ proxies:
     tls: false
     skip-cert-verify: true
     network: tcp
-  - &id033
-    name: 🇨🇦_CA_加拿大_4
+  - &id016
+    name: 🇷🇺_RU_俄罗斯联邦_2
     type: vmess
-    server: 142.171.229.164
-    port: 13469
+    server: 46.29.166.124
+    port: 47412
     cipher: auto
-    uuid: 3b77a115-0e8a-4939-e64c-f13994942c2e
+    uuid: 291a5c6a-447e-4fc7-b3d7-28ebec5cbcd7
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: tcp
-  - &id034
-    name: 🇺🇸_US_美国_16
+  - &id017
+    name: 🇺🇸_US_美国_7
     type: vmess
-    server: 147.189.161.106
-    port: 30823
+    server: 43.159.145.188
+    port: 8002
     cipher: auto
-    uuid: d992809a-ce81-482b-c39d-7cfb60ef2b99
+    uuid: 4c09daf4-a60d-4858-973e-bc200cbbb7a2
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -472,23 +249,6 @@ proxy-groups:
       - *id015
       - *id016
       - *id017
-      - *id018
-      - *id019
-      - *id020
-      - *id021
-      - *id022
-      - *id023
-      - *id024
-      - *id025
-      - *id026
-      - *id027
-      - *id028
-      - *id029
-      - *id030
-      - *id031
-      - *id032
-      - *id033
-      - *id034
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -511,23 +271,6 @@ proxy-groups:
       - *id015
       - *id016
       - *id017
-      - *id018
-      - *id019
-      - *id020
-      - *id021
-      - *id022
-      - *id023
-      - *id024
-      - *id025
-      - *id026
-      - *id027
-      - *id028
-      - *id029
-      - *id030
-      - *id031
-      - *id032
-      - *id033
-      - *id034
   - name: SELECT
     type: select
     proxies:
@@ -548,23 +291,6 @@ proxy-groups:
       - *id015
       - *id016
       - *id017
-      - *id018
-      - *id019
-      - *id020
-      - *id021
-      - *id022
-      - *id023
-      - *id024
-      - *id025
-      - *id026
-      - *id027
-      - *id028
-      - *id029
-      - *id030
-      - *id031
-      - *id032
-      - *id033
-      - *id034
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
